Changes in CharSeq: introduced compact (1-byte) presentation, intern, etc.